# Preference-Aware-AI-Workflow-Engine

./: .env.example  .gitignore  DYNAMIC_MODEL_ASSIGNMENT.md  LLM_DEBUG_GUIDE.md  LLM_DEBUG_MODEL_INFO.md  Makefile  PREFERENCES_INJECTION_FIX.md  PREFERENCES_INJECTION_GUIDE.md  README.md  README_CN.md  main.py  package-lock.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
.crew/: preferences.md  preferences.md.backup.20260428_163916  system_rules.md
.devcontainer/: Dockerfile  devcontainer.json
.local/llm_debug/: prompt_20260427-105900_644.txt  prompt_20260427-110034_613.txt  response_20260427-110034_609.txt  response_20260427-110123_245.txt
crewai_web/: __init__.py  __main__.py
crewai_web/core/: alerters.py  debug_service.py  json_utils.py
crewai_web/core/ai/: __init__.py  client.py  (+2 more)
crewai_web/web/: __init__.py  __main__.py  app.py  config.py
docs/: AGENT_SKILLS_BINDING.md  AI_INTERACTION_FLOW.md  CONTRIBUTING.md  CREW_EXECUTION_ARCHITECTURE.md  DESIGN.md  EXECUTION_SERVICES_REFACTORING.md  FRONTEND_CRUD_COMPOSABLE_GUIDE.md  FRONTEND_REFACTORING_COMPLETED.md  FRONTEND_REFACTORING_PLAN.md  LLM_CLIENT_ARCHITECTURE.md  LLM_FACTORY_REFACTORING.md  PREFERENCES_GUIDE.md  REFACTORING_COMPLETION_SUMMARY.md  SKILLS_CONFIGURATION.md  SKILLS_INTEGRATION.md  SKILLS_TOOLS_GUIDE.md
docs/archive/: CHAT_VUE_REFACTORING_EXAMPLE.md  CORE_REFACTORING.md  README.md  REFACTORING_SUMMARY.md
frontend/: REFACTOR_SUMMARY.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
skills/code-generator/: SKILL.md
(+136 files in other folders)
